--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                         <p class="answer">Nigerian</p>
                     </div>
                     <div id="city" class="locationBox">
-                        <p class="question">Residence:</p>
+                        <p class="question">Residency:</p>
                         <p class="answer">Qatar</p>
                     </div>
                     <div id="age" class="locationBox">
@@ -355,7 +355,7 @@
                                         +234 812 742 3610
                                     </a>
                                     <br>
-                                    <a href="mailto:sadeshile@gmail.com?subject=I%have%20a%20job%20for%20you">
+                                    <a href="mailto:sadeshile@gmail.com?subject=I%20have%20a%20job%20for%20you">
 
                                         ibraheemadeshile.q@gmail.com
                                     </a>
@@ -374,15 +374,15 @@
                                         <img src="./icons8-linkedin.svg" alt="linkedin" class="socialsIcon">
                                     </a>
 
-                                    <a href="http://" target="_blank" rel="noopener noreferrer">
+                                    <a href="https://www.github.com/Adeshile217" target="_blank" rel="noopener noreferrer">
                                         <img src="./icons8-github.svg" alt="github" class="socialsIcon">
 
                                     </a>
-                                    <a href="http://" target="_blank" rel="noopener noreferrer">
+                                    <a href="https://www.instagram.com/ade_adeshile__?igsh=MXVjaWkzcHJhbmJkeA%3D%3D&utm_source=qr" target="_blank" rel="noopener noreferrer">
 
                                         <img src="./icons8-instagram.svg" alt="instagram" class="socialsIcon">
                                     </a>
-                                    <a href="http://" target="_blank" rel="noopener noreferrer">
+                                    <a href="http://wa.me/2348127423610" target="_blank" rel="noopener noreferrer">
 
                                         <img src="./icons8-whatsapp.svg" alt="whatsapp" class="socialsIcon">
                                     </a>
