--- a/index.html
+++ b/index.html
@@ -376,16 +376,16 @@
         </div>
 
         <!-- bot icon -->
-        <!-- <div id="chatbot-icon" aria-label="Open chat" role="button" tabindex="0">
+        <div id="chatbot-icon" aria-label="Open chat" role="button" tabindex="0">
             <svg viewBox="0 0 24 24" aria-hidden="true" focusable="false">
                 <path
                     d="M12 3C7 3 3 6.58 3 11c0 1.92 1.08 3.68 2.82 4.98L6 21l4.67-2.79c.44.07.9.09 1.33.09 5 0 9-3.58 9-8s-4-8-9-8zm0 14c-.34 0-.66-.03-1-.08L7 17l.66-2.67C6.32 13.28 5 12.23 5 11c0-2.76 3.58-5 7-5s7 2.24 7 5-3.58 5-7 5z" />
             </svg>
-        </div> -->
+        </div>
 
         <!-- Chatbot Box -->
 
-        <!-- <div id="chatbot">
+        <div id="chatbot">
             <div id="chatbot-header">Chat with us</div>
             <div id="chatbot-messages"> </div>
             <div id="chatbot-input">
@@ -393,7 +393,7 @@
                 <button id="chatbot-button"> Send </button>
             </div>
 
-        </div> -->
+        </div>
 
 
 
