--- a/index.html
+++ b/index.html
@@ -376,16 +376,16 @@
         </div>
 
         <!-- bot icon -->
-        <!-- <div id="chatbot-icon" aria-label="Open chat" role="button" tabindex="0">
+        <div id="chatbot-icon" aria-label="Open chat" role="button" tabindex="0">
             <svg viewBox="0 0 24 24" aria-hidden="true" focusable="false">
                 <path
                     d="M12 3C7 3 3 6.58 3 11c0 1.92 1.08 3.68 2.82 4.98L6 21l4.67-2.79c.44.07.9.09 1.33.09 5 0 9-3.58 9-8s-4-8-9-8zm0 14c-.34 0-.66-.03-1-.08L7 17l.66-2.67C6.32 13.28 5 12.23 5 11c0-2.76 3.58-5 7-5s7 2.24 7 5-3.58 5-7 5z" />
             </svg>
-        </div> -->
+        </div>
 
         <!-- Chatbot Box -->
 
-        <!-- <div id="chatbot">
+        <div id="chatbot">
             <div id="chatbot-header">Chat with us</div>
             <div id="chatbot-messages"> </div>
             <div id="chatbot-input">
@@ -393,7 +393,7 @@
                 <button id="chatbot-button"> Send </button>
             </div>
 
-        </div> -->
+        </div>
 
 
 
@@ -598,17 +598,8 @@
     
     <script src="./script.js"></script>
 
-    <!-- Start of ChatBot (www.chatbot.com) code -->
-<script>
-  window.__ow = window.__ow || {};
-  window.__ow.organizationId = "793d1312-c43b-4374-b3a2-b18133b26ce3";
-  window.__ow.template_id = "5afb1229-44b0-4050-824a-a11505c4d61b";
-  window.__ow.integration_name = "manual_settings";
-  window.__ow.product_name = "chatbot";   
-  ;(function(n,t,c){function i(n){return e._h?e._h.apply(null,n):e._q.push(n)}var e={_q:[],_h:null,_v:"2.0",on:function(){i(["on",c.call(arguments)])},once:function(){i(["once",c.call(arguments)])},off:function(){i(["off",c.call(arguments)])},get:function(){if(!e._h)throw new Error("[OpenWidget] You can't use getters before load.");return i(["get",c.call(arguments)])},call:function(){i(["call",c.call(arguments)])},init:function(){var n=t.createElement("script");n.async=!0,n.type="text/javascript",n.src="https://cdn.openwidget.com/openwidget.js",t.head.appendChild(n)}};!n.__ow.asyncInit&&e.init(),n.OpenWidget=n.OpenWidget||e}(window,document,[].slice))
-</script>
-<noscript>You need to <a href="https://www.chatbot.com/help/chat-widget/enable-javascript-in-your-browser/" rel="noopener nofollow">enable JavaScript</a> in order to use the AI chatbot tool powered by <a href="https://www.chatbot.com/" rel="noopener nofollow" target="_blank">ChatBot</a></noscript>
-<!-- End of ChatBot code -->
+ 
+
 </body>
 
 </html>
